delivery/base/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: delivery:apps/Deployment:delivery/spce-delivery
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"delivery:apps/Deployment:delivery/spce-delivery","deployment.kubernetes.io/revision":"1"},"creationTimestamp":"2026-02-14T09:32:20Z","generation":3,"name":"spce-delivery","namespace":"delivery","resourceVersion":"6186563","uid":"af7cc419-46f6-41cd-a1a4-4fec2e01b639"},"spec":{"progressDeadlineSeconds":600,"replicas":0,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"spce-del [...]
    creationTimestamp: "2026-03-02T22:28:41Z"
    generation: 1
    name: spce-delivery
    namespace: delivery
    resourceVersion: "7131401"
    uid: 039f7f04-f164-43dc-ba3a-701de732642f
  spec:
    progressDeadlineSeconds: 600
    replicas: 0
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: spce-delivery
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: spce-delivery
      spec:
        containers:
        - env:
          - name: ASPNETCORE_URLS
            value: http://+:8080
          - name: Kafka__BootstrapServers
            value: my-kafka-kafka-bootstrap.kafka.svc:9092
          - name: Kafka__ShipmentsTopic
            value: shipments
          - name: Kafka__DeliveriesTopic
            value: deliveries
          - name: Kafka__ConsumerGroup
            value: spce-delivery
          image: abu7midan/spce-delivery:1.0
          imagePullPolicy: IfNotPresent
          name: spce-delivery
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    conditions:
    - lastTransitionTime: "2026-03-02T22:28:41Z"
      lastUpdateTime: "2026-03-02T22:28:41Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-03-02T22:28:41Z"
      lastUpdateTime: "2026-03-02T22:28:41Z"
      message: ReplicaSet "spce-delivery-69cf8b87" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
kind: List
metadata:
  resourceVersion: ""
