delivery/base/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      konghq.com/strip-path: "true"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"konghq.com/strip-path":"true"},"name":"spce-delivery","namespace":"delivery"},"spec":{"ingressClassName":"kong","rules":[{"host":"api-kong.abu7midan.com","http":{"paths":[{"backend":{"service":{"name":"spce-delivery","port":{"number":80}}},"path":"/delivery","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-02-14T09:32:20Z"
    generation: 1
    name: spce-delivery
    namespace: delivery
    resourceVersion: "7687079"
    uid: c1d66667-a211-4242-b8a5-06f4d041c962
  spec:
    ingressClassName: kong
    rules:
    - host: api-kong.abu7midan.com
      http:
        paths:
        - backend:
            service:
              name: spce-delivery
              port:
                number: 80
          path: /delivery
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.153.74
kind: List
metadata:
  resourceVersion: ""
