delivery/base/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      argocd.argoproj.io/tracking-id: delivery:/Service:delivery/spce-delivery
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"delivery:/Service:delivery/spce-delivery"},"creationTimestamp":"2026-02-14T09:32:20Z","name":"spce-delivery","namespace":"delivery","resourceVersion":"6186552","uid":"6ee7d038-5140-4683-b1a3-4c424c62e6d2"},"spec":{"clusterIP":"10.108.24.30","clusterIPs":["10.108.24.30"],"internalTrafficPolicy":"Cluster","ipFamilies":["IPv4"],"ipFamilyPolicy":"SingleStack","ports":[{"name":"http","port":80,"pr [...]
    creationTimestamp: "2026-03-02T22:28:43Z"
    name: spce-delivery
    namespace: delivery
    resourceVersion: "7131430"
    uid: 05aeb5ea-d2f6-4a8d-8407-d3f361547891
  spec:
    clusterIP: 10.108.24.30
    clusterIPs:
    - 10.108.24.30
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: spce-delivery
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
